Revert "Fix mobile Safari compatibility: add cache control, improve iframe attributes, fix z-index"
This reverts commit e01133296e4e53ae7e40f69a286135edad6a7dc6.

--- a/css/home/hero.css
+++ b/css/home/hero.css
@@ -56,9 +56,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 0;
-  background-color: var(--bg-dark);
-  -webkit-overflow-scrolling: touch;
+  z-index: -1;
 }
 
 /* Enlarge and center the embedded Spline scene (donut). Adjust scale by changing width/height */
